data/derived/comb/progs/unify/prog0634.ml.out
Characters 33-34:
  let f a x = (x (a a)) in
                    ^
Error: This expression has type 'a -> 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'b
